# sdnx

./: CMakeLists.txt  LICENSE  README.md  index.html  package-lock.json  package.json
src/: CMakeLists.txt  sdnx.cpp  sdnx.rc  style.css  window.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/include/: resource.h  sdnx.h  window.h
src/scripts/: checkbox.js  darkmode.js  dropdown.js
