[package]
name = "sdnx"
version = "0.0.1"
description = "Setup your SD Card and homebrew your Nintendo Switch with ease!"
authors = ["Akane <zenailsc@gmail.com>"]
license = "MIT License"
repository = "https://github.com/mrakane7/sdnx"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.tauri-build]

version = "1.3"
features = []

[dependencies]

serde_json = "1.0.96"

[dependencies.tauri]

version = "1.3"
features = ["shell-open"]

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[features]

# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
